--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 C++[[:space:]]Primer.pdf filter=lfs diff=lfs merge=lfs -text
+深入理解计算机系统.pdf filter=lfs diff=lfs merge=lfs -text
+设计模式.pdf filter=lfs diff=lfs merge=lfs -text
